writerfilter/source/dmapper/DomainMapper_Impl.cxx
@@ -159,6 +159,7 @@ DomainMapper_Impl::DomainMapper_Impl(
         m_bIsColumnBreakDeferred( false ),
         m_bIsPageBreakDeferred( false ),
         m_bStartTOC(false),
+        m_bStartTOCHeaderFooter(false),
         m_bStartedTOC(false),
         m_bStartIndex(false),
         m_bStartBibliography(false),
@@ -1175,26 +1176,33 @@ void DomainMapper_Impl::appendTextPortion( const OUString& rString, PropertyMapP
             {
                 if (m_bStartTOC || m_bStartIndex || m_bStartBibliography || m_bStartGenericField)
                 {
-                    m_bStartedTOC = true;
-                    uno::Reference< text::XTextCursor > xTOCTextCursor;
-                    xTOCTextCursor = xTextAppend->getEnd()->getText( )->createTextCursor( );
-                    xTOCTextCursor->gotoEnd(false);
-                    if (xTOCTextCursor.is())
+                    if(m_bInHeaderFooterImport && !m_bStartTOCHeaderFooter)
                     {
-                        if (m_bStartIndex || m_bStartBibliography || m_bStartGenericField)
-                            xTOCTextCursor->goLeft(1, false);
-                        xTextRange = xTextAppend->insertTextPortion(rString, pValues, xTOCTextCursor);
-                        m_bTextInserted = true;
-                        xTOCTextCursor->gotoRange(xTextRange->getEnd(), true);
-                        mxTOCTextCursor = xTOCTextCursor;
+                        xTextRange = xTextAppend->appendTextPortion(rString, pValues);
                     }
                     else
                     {
-                        xTextRange = xTextAppend->appendTextPortion(rString, pValues);
-                        xTOCTextCursor = xTextAppend->createTextCursor();
-                        xTOCTextCursor->gotoRange(xTextRange->getEnd(), false);
+                        m_bStartedTOC = true;
+                        uno::Reference< text::XTextCursor > xTOCTextCursor;
+                        xTOCTextCursor = xTextAppend->getEnd()->getText( )->createTextCursor( );
+                        xTOCTextCursor->gotoEnd(false);
+                        if (xTOCTextCursor.is())
+                        {
+                            if (m_bStartIndex || m_bStartBibliography || m_bStartGenericField)
+                                xTOCTextCursor->goLeft(1, false);
+                            xTextRange = xTextAppend->insertTextPortion(rString, pValues, xTOCTextCursor);
+                            m_bTextInserted = true;
+                            xTOCTextCursor->gotoRange(xTextRange->getEnd(), true);
+                            mxTOCTextCursor = xTOCTextCursor;
+                        }
+                        else
+                        {
+                            xTextRange = xTextAppend->appendTextPortion(rString, pValues);
+                            xTOCTextCursor = xTextAppend->createTextCursor();
+                            xTOCTextCursor->gotoRange(xTextRange->getEnd(), false);
+                        }
+                        m_aTextAppendStack.push(TextAppendContext(xTextAppend, xTOCTextCursor));
                     }
-                    m_aTextAppendStack.push(TextAppendContext(xTextAppend, xTOCTextCursor));
                 }
                 else
                     xTextRange = xTextAppend->appendTextPortion(rString, pValues);
@@ -2880,6 +2888,8 @@ void DomainMapper_Impl::handleToc
 {
     OUString sValue;
     m_bStartTOC = true;
+    if(m_bInHeaderFooterImport)
+        m_bStartTOCHeaderFooter = true;
     bool bTableOfFigures = false;
     bool bHyperlinks = false;
     bool bFromOutline = false;
@@ -4078,6 +4088,8 @@ void DomainMapper_Impl::PopFieldContext()
                     m_bStartTOC = false;
                     m_bStartIndex = false;
                     m_bStartBibliography = false;
+                    if(m_bInHeaderFooterImport && m_bStartTOCHeaderFooter)
+                        m_bStartTOCHeaderFooter = false;
                 }
                 else
                 {
